feat(scenario): add scenario workspace
